--- a/2017/06-07-Durham-computing.tex
+++ b/2017/06-07-Durham-computing.tex
@@ -5,6 +5,8 @@
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{backgrounds}% only to show the bounding box
 \usepackage{pgf}
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
 \usepackage{appendixnumberbeamer}
 \usepackage{amsmath}
 \DeclareMathOperator{\tr}{tr}
@@ -25,11 +27,11 @@
 \newcommand{\highlight}[1]{\colorbox{red!20}{\color{black} #1}}
 \newcommand{\arxivlink}[2]{%
   \href{http://www.arxiv.org/abs/#1}%
-  {{\small\texttt{arXiv:\,#1\,[#2]}}}%
+  {\texttt{arXiv:\,#1\,[#2]}}%
 }
 \newcommand{\doilink}[1]{%
   \href{http://dx.doi.org/#1}%
-  {{\small\texttt{doi:\,#1}{}}}%
+  {\texttt{doi:\,#1}{}}%
 }
 
 \author{Lawrence Mitchell\inst{1,*}}
@@ -77,13 +79,123 @@ London
 \begin{document}
 \maketitle
 
-% \setbeamertemplate{background}{}
-% \setbeamercolor{footline}{
-%   use=normal text,
-%   fg=normal text.fg,
-% }
+\begin{frame}
+  \frametitle{A problem}
+  \begin{itemize}
+  \item Computational simulation of partial differential equations
+    underpins much of modern science and engineering.
+  \item Simulation models are ever more complex.
+  \item The extra computational effort used to be offset by increased
+    hardware performance
+  \item But we have a problem \dots
+  \end{itemize}
+\end{frame}
 
-\section{Introduction}
+\begin{frame}
+  \frametitle{The free lunch finished a long time ago}
+  \begin{itemize}
+  \item Prior to c.~2005, I could run a simulation faster simply by buying a
+    new computer.
+  \item Now, not so much:
+
+  \begin{tabular}{lccc}
+    Chip            & Cores & Clock & Vector width \\
+    \hline
+    NVidia P100     & 56    & 1.5   & 32           \\
+    Intel Broadwell & 22    & 2.2   & 4            \\
+    Intel Phi       & 72    & 1.5   & 8            \\
+    Intel Skylake   & 32    & 2.2   & 8            \\
+  \end{tabular}
+
+\item Today's simulation models will run \emph{slower}, not faster, on
+  tomorrow's hardware.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{What are the challenges?}
+  \begin{itemize}
+  \item Simulation software needs to exploit \emph{fine-grained}
+    parallelism.
+  \item Most code intimately intertwines the numerical algorithm with
+    its \emph{implementation}.
+  \item To apply program transformations, we have to unpick,
+    understand, and reimplement.
+  \item This is empirically not possible for compilers.
+  \item Moreover, this approach requires that our model developers are
+    polymaths.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Exploiting mathematical abstractions}
+  Compute $y \leftarrow \nabla^2 x$ using finite differences.
+  \begin{equation*}
+    y_{i,j} = x_{i-1, j} + x_{i+1, j} + x_{i, j-1} + x_{i, j+1} - 4x_{i,j}    
+  \end{equation*}
+  \begin{overlayarea}{\textwidth}{0.8\textheight}
+  \begin{onlyenv}<1>
+    \begin{block}{Before 1953}
+\begin{minted}[fontsize=\tiny]{asm}
+        ...
+        faddp   %st, %st(1)
+        movl    -8(%ebp), %edx
+        movl    %edx, %eax
+        sall    $2, %eax
+        addl    %edx, %eax
+        leal    0(,%eax,4), %edx
+        addl    %edx, %eax
+        sall    $2, %eax
+        movl    %eax, %edx
+        movl    -4(%ebp), %eax
+        addl    %edx, %eax
+        subl    $101, %eax
+        flds    x.3305(,%eax,4)
+        flds    .LC0
+        fmulp   %st, %st(1)
+        faddp   %st, %st(1)
+        fstps   y.3307(,%ecx,4)
+        ...
+\end{minted}
+    \end{block}
+  \end{onlyenv}
+  \begin{onlyenv}<2->
+    \begin{block}{After 1953}
+\begin{minted}[fontsize=\tiny]{fortran}
+      PROGRAM MAIN
+      PARAMETER (N=100)
+      REAL X(N,N), Y(N,N)
+      DO 10 J=2,N-1
+         DO 20 I=2,N-1
+            Y(I,J)=X(I-1,J)+X(I+1,J)+X(I,J-1)+X(I,J+1)+4*X(I,J)
+ 20      CONTINUE
+ 10   CONTINUE
+      DO 30 I=1,N
+         Y(I,1) = 0.0
+         Y(I,N) = 0.0
+         Y(1,I) = 0.0
+         Y(N,I) = 0.0
+ 30   CONTINUE
+      END
+\end{minted}
+    \end{block}
+  \end{onlyenv}
+  \end{overlayarea}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Abstractions for PDE solvers}
+  \begin{itemize}
+  \item For complex numerical models, Fortran alone is not sufficient
+  \item One answer is software libraries
+  \item But these still put much of the burden on the model developer
+  \item For PDEs discretised using the \emph{finite element method},
+    the mathematical formalism is particularly strong
+  \item We mirror this in a domain specific language (DSL), and
+    use code generation to provide a high-performance implementation.
+  \end{itemize}
+\end{frame}
+
 \begin{frame}
   \frametitle{Finite element crash course}
   \begin{align*}
@@ -179,26 +291,16 @@ London
     \sum_{e \in \mathcal{T}} \int_e\! F(u_h)v_h\, \text{d}x
   \end{equation*}
 
-  (Usually) perform element integrals with numerical quadrature
+  perform element integrals with numerical quadrature
   \begin{equation*}
     \int_e F(u_h)v_h\,\text{d}x = \sum_q w_q F(u_h(q)) v_h(q)
   \end{equation*}
 
-  Replace $u_h(q), v_h(q)$ with expansion in finite element basis
+  and replace $u_h(q), v_h(q)$ with expansion in the finite element basis
   \begin{align*}
     u_h(q) &= \sum_i u_h^i \phi_i(q)\\
     v_h(q) &= \phi_j(q)\\
   \end{align*}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Abstractly}
-  \begin{itemize}
-  \item Mathematics says ``here is the integral to compute on each
-    element, do that everywhere''
-  \item Doesn't specify \emph{how} to compute the integral
-  \item Doesn't specify \emph{how} to gather the element contributions
-  \end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -207,46 +309,12 @@ London
     Once we pick the discretisation, writing the code for $\sum_q w_q
     F(u_h(q)) v_h(q)$ is mechanical.
   \end{block}
-  \begin{center}
-    \begin{overlayarea}{\textwidth}{0.8\textheight}
-      \begin{onlyenv}<1>
-\begin{minted}[fontsize=\tiny]{cpp}
-template<typename EG, typename LFSU, typename X, typename LFSV, typename M>
-void jacobian_volume(const EG& eg, const LFSU& lfsu, const X& x,
-                     const LFSV& lfsv, M& mat) const {
-  const auto geo = eg.geometry();
-  const auto S = geo.jacobianInverseTransposed(qp);
-  RF factor = weight*geo.integrationElement(qp);
-  double grad[dim][n] = {{0.0}};
-  for (int i=0; i<dim; i++)
-    for (int k=0; k<dim; k++)
-      for (int j=0; j<n; j++)
-        grad[i][j] += S[i][k] * gradhat[k][j];
-  double A[n][n] = {{0.0}};
-  for (int i=0; i<n; i++)
-    for (int k=0; k<dim; k++)
-      for (int j=0; j<n; j++)
-        A[i][j] += grad[k][i]*grad[k][j];
-  for (int i=0; i<n; i++)
-    for (int j=0; j<n; j++)
-      mat.accumulate(lfsu,i,lfsu,j,A[i][j]*factor);
-}
-\end{minted}
-      \end{onlyenv}
-      \begin{onlyenv}<2>
-        \begin{equation*}
-          \int_\Omega \nabla u \cdot \nabla v\,\text{d}x
-        \end{equation*}
-      \end{onlyenv}
-      \begin{onlyenv}<3>
-        \begin{corollary}
-          Computers are good at mechanical things, why don't we get the
-          computer to write the element integral?
-        \end{corollary}
-      \end{onlyenv}
-    \end{overlayarea}
-\end{center}
+  \begin{corollary}
+    Computers are good at mechanical things, why don't we get the
+    computer to write the element integral?
+  \end{corollary}
 \end{frame}
+
 \begin{frame}
   \frametitle{Firedrake}
 
@@ -257,9 +325,9 @@ void jacobian_volume(const EG& eg, const LFSU& lfsu, const X& x,
   \end{center}
 
   \begin{flushright}
-    {\footnotesize F. Rathgeber, D.A. Ham, \textbf{LM}, M. Lange,
-      F. Luporini, A.T.T. McRae, G.-T. Bercea, G.R. Markall,
-      P.H.J. Kelly. ACM Transactions on Mathematical Software,
+    {\scriptsize F.~Rathgeber, D.A.~Ham, \textbf{LM}, M.~Lange,
+      F.~Luporini, A.T.T.~McRae, G.-T.~Bercea, G.R.~Markall,
+      P.H.J.~Kelly. ACM Transactions on Mathematical Software,
       2016. \arxivlink{1501.01809}{cs.MS}}
   \end{flushright}
 \end{frame}
@@ -268,8 +336,8 @@ void jacobian_volume(const EG& eg, const LFSU& lfsu, const X& x,
   \frametitle{Exploiting abstractions}
   \begin{itemize}
   \item Firedrake builds on, and extends, embedded DSLs developed in
-    the FEniCS project \url{www.fenicsproject.org}
-  \item The \emph{Unified Form Language} \parencite{Alnaes:2014} to
+    the FEniCS project.
+  \item Particularly, the \emph{Unified Form Language} \parencite{Alnaes:2014} to
     specify variational forms
   \item A symbolic problem description (generic) is woven together with
     problem-specific data, and executed by a runtime Python library
@@ -332,20 +400,323 @@ a = derivative(r, u, du)
   \end{columns}
 \end{frame}
 
-- We make progress in science by building on the work of others
+\begin{frame}[fragile]
+  \frametitle{Mechanical translation}
+  \begin{itemize}
+  \item A \emph{form compiler} translates a symbolic description (UFL) into
+    low-level (C/C++/...) code for performing an element integral.
+    \begin{flushright}
+      {\scriptsize M.~Homolya, \textbf{LM}, F.~Luporini, D.A.~Ham. \arxivlink{1705.03667}{cs.MS}}
+    \end{flushright}
+  \end{itemize}
+  \begin{onlyenv}<1>
+\begin{minted}[fontsize=\scriptsize]{python}
+V = FiniteElement("Lagrange", triangle, 1)
+u = TrialFunction(V)
+v = TestFunction(V)
+a = dot(grad(u), grad(v))*dx
+\end{minted}
+  \end{onlyenv}
+  \begin{uncoverenv}<2>
+    \begin{columns}
+      \begin{column}{0.5\textwidth}
+\begin{minted}[fontsize=\tiny]{c}
+void cell_integral(double A[3][3],
+                   double coords[3][2]) {
+  static const double t10[3] = {...};
+  static const double t12[3] = {...};
+  double t13[3];
+  double t14[3];
+  double t0 = (-1 * coords[0][1]);
+  double t1 = (t0 + coords[1][1]);
+  double t2 = (-1 * coords[0][0]);
+  double t3 = (t2 + coords[1][0]);
+  double t4 = (t0 + coords[2][1]);
+  double t5 = (t2 + coords[2][0]);
+  double t6 = ((t3 * t4) + (-1 * (t5 * t1)));
+  double t7 = ((-1 * t1) / t6);
+  double t8 = (t4 / t6);
+  double t9 = (t3 / t6);
+  double t11 = ((-1 * t5) / t6);
+\end{minted}
+      \end{column}
+      \begin{column}{0.5\textwidth}
+\begin{minted}[fontsize=\tiny]{c}
+  for (int k0 = 0; k0 < 3; k0++) {
+    t13[k0] = (t11 * t12[k0]) + (t9 * t10[k0]);
+    t14[k0] = (t8 * t12[k0]) + (t7 * t10[k0]);
+  }
+  double t15 = (0.5 * fabs(t6));
+  for (int j0 = 0; j0 < 3; j0++) {
+    double t16 = ((t11 * t12[j0])
+                  + (t9 * t10[j0]));
+    double t17 = ((t8 * t12[j0])
+                  + (t7 * t10[j0]));
+    for (int k0 = 0; k0 < 3; k0++) {
+      A[j0][k0] += t15 * ((t17 * t14[k0])
+                          + (t16 * t13[k0]));
+    }
+  }
+}
+\end{minted}
+      \end{column}
+    \end{columns}
+  \end{uncoverenv}
+\end{frame}
 
-- Sophisticated reasoning about complex algorithms in computational
-science is possible due to creation of appropriate abstractions.
+\begin{frame}[fragile]
+  \frametitle{Optimisation of finite element kernels}
+  
+  \begin{problem}
+    Modern optimising compilers do a bad job on finite element
+    kernels.
+  \end{problem}
+  \begin{exampleblock}{Code motion (or not?)}
+\begin{minted}[fontsize=\scriptsize]{c}
+for (i = 0; i < L; i++ )
+   for (j = 0; j < M; j++)
+      for (k = 0; k < N; k++)
+         A[j][k] += f(i, j)*g(i, k)
+\end{minted}
+  \end{exampleblock}
+  \begin{corollary}
+    We need to spoon-feed the compiler already optimised code.
+  \end{corollary}
+\end{frame}
 
-- Yet often, these abstractions are not mirrored in the computational
-implementation
+\begin{frame}
+  \frametitle{Automating expertise}
+  \begin{itemize}
+  \item For a given kernel, can optimise by hand
+  \item But this approach doesn't scale
+  \item \dots and the best strategy is problem-dependent.
+  \item Code generation allows us to package expertise, and provide it
+    to everyone.
+  \end{itemize}
+\end{frame}
 
-- Status quo
+\begin{frame}
+  \frametitle{An example: sum factorisation}
+  \begin{itemize}
+  \item Consider evaluating a field, defined by basis coefficients
+    $f_i$ at quadrature points $q$.
 
-- Multigrid solver
+  \begin{equation*}
+    \mathcal{F}_q = \sum_i \phi_{i,q} f_i
+  \end{equation*}
 
-- Solver composition
+  \item This matrix-vector product requires $\mathcal{O}(|i||q|) =
+    \mathcal{O}(p^{2d})$ operations for polynomial degree $p$ in $d$
+    dimensions.
+\end{itemize}
+\end{frame}
 
+\begin{frame}
+  \frametitle{Exploiting structure}
+  On many elements, there is \emph{structure} in the basis functions:
+  \begin{equation*}
+    \phi_{i,q} := \phi_{(j,k),(p,r)} = \varphi_{j,p}\varphi_{k,r}
+  \end{equation*}
+  and so
+  \begin{align*}
+    \mathcal{F}_{(p,r)} &= \sum_{j,k} \phi_{(j,k),(p,r)} f_{j,k} \\
+                        &= \sum_{j,k} \varphi_{j,p}\varphi_{k,r} f_{j,k} \\
+                        &= \sum_j \varphi_{j,p} \sum_k \varphi_{k,r} f_{j,k}
+  \end{align*}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Large computational savings}
+  \begin{itemize}
+  \item Performing this transformation provides for \emph{optimal
+      complexity} evaluation of matrix-vector products.
+
+    \begin{center}
+      \begin{tabular}{c|c|c|c}
+        Method    & Build operator        & MatVec                  & Mem refs
+        \\
+                  & (FLOPs)               & (FLOPs)                 & (bytes)               \\
+        \hline
+        Assembled & $\mathcal{O}(p^{3d})$ & $\mathcal{O}(p^{2d})$   & $\mathcal{O}(p^{2d})$ \\
+        MF        & 0                     & $\mathcal{O}(p^{2d})$   & $\mathcal{O}(p^d)$    \\
+        MF + SF   & 0                     & $\mathcal{O}(dp^{d+1})$ & $\mathcal{O}(p^d)$
+      \end{tabular}
+    \end{center}
+    
+  \item This is necessary if we want high-order methods to be competitive.
+  \end{itemize}
+  
+\end{frame}
+
+\begin{frame}[fragile]
+  \frametitle{Automated sum factorisation}
+  \begin{itemize}
+  \item C and Fortran compilers do not perform these transformations
+  \item You can, of course, perform them by hand.  But why not get a
+    compiler to do it?
+  \end{itemize}
+
+  \begin{uncoverenv}<2>
+  \begin{tikzpicture}[scale=0.9]
+    \begin{loglogaxis}[name=plot,
+      small,
+      title=FLOPs for hyperelastic model on single hexahedron,
+      xlabel=Polynomial degree,
+      ylabel=FLOPs,
+      xtick={1,2,4,8,16,32},
+      xticklabels={$1$,$2$,$4$,$8$,$16$,$32$},
+      yminorticks=false,
+      axis lines=left,
+      log basis x=2,
+      legend entries={TSFC ``vanilla'', TSFC ``spectral''},
+      legend style={cells={anchor=east},
+        legend pos=outer north east,
+        draw=none},
+      ]
+      \pgfplotstableread[format=inline]{
+degree flops
+1 57991.0
+2 898053.0
+3 5695832.0
+4 23385568.0
+5 73395072.0
+6 191831126.0
+7 439133008.0
+8 909180492.0
+9 1739859128.0
+10 3125082802.0
+11 5328273576.0
+12 8697298808.0
+13 13680865552.0
+14 20846372238.0
+15 30899217632.0
+16 4.47036e+10
+17 6.33046e+10
+18 8.79521e+10
+19 1.20126e+11
+20 1.61561e+11
+21 2.1428e+11
+22 2.80615e+11
+23 3.63248e+11
+24 4.65233e+11
+25 5.90039e+11
+26 7.41582e+11
+27 9.24258e+11
+28 1.14299e+12
+29 1.40325e+12
+30 1.71113e+12
+31 2.07336e+12
+32 2.49735e+12
+}\vanilla;
+
+       \pgfplotstableread[format=inline]{
+degree flops
+1 11320
+2 70587
+3 227308
+4 540688
+5 1.09416e+06
+6 1.98419e+06
+7 3.32309e+06
+8 5.23901e+06
+9 7.87593e+06
+10 1.13937e+07
+11 1.59679e+07
+12 2.17902e+07
+13 2.90678e+07
+14 3.8024e+07
+15 4.88977e+07
+16 6.19439e+07
+17 7.74332e+07
+18 9.56522e+07
+19 1.16903e+08
+20 1.41505e+08
+21 1.69791e+08
+22 2.02111e+08
+23 2.38831e+08
+24 2.80332e+08
+25 3.27013e+08
+26 3.79286e+08
+27 4.37581e+08
+28 5.02342e+08
+29 5.7403e+08
+30 6.53122e+08
+31 7.4011e+08
+32 8.35503e+08
+}\sumfact;
+
+      \pgfplotstableset{create on use/vanilla/.style={create
+          col/expr={1e4*pow(\thisrow{degree},6)}}}
+      \pgfplotstableset{create on use/spectral/.style={create
+          col/expr={5e2*pow(\thisrow{degree},4)}}}
+  
+      \addplot+[mark=none, color=black, line width=1.5pt] table [x=degree,y=flops] \vanilla;
+      \addplot+[mark=none, color=black, dashed, line width=1.5pt] table [x=degree,y=flops] \sumfact;
+      \addplot+[mark=none, color=black, dotted, line width=1pt] table
+      [x=degree,y=vanilla] \vanilla
+      coordinate [pos=0.67] (A);
+      \node at (A) [anchor=south east] {$\mathcal{O}(p^6)$};
+      \addplot+[mark=none, color=black, dotted, line width=1pt] table
+      [x=degree,y=spectral] \vanilla
+      coordinate [pos=0.67] (B);
+      \node at (B) [anchor=north west] {$\mathcal{O}(p^4)$};
+    \end{loglogaxis}
+  \end{tikzpicture}
+  \end{uncoverenv}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Manipulating PDE solvers}
+  \begin{itemize}
+  \item With symbolic structure available at run time, it is possible
+    to write libraries that manipulate PDE solvers.
+  \item Can build complex preconditioners for coupled systems without
+    invasive changes in model.
+    \begin{flushright}
+      {\scriptsize \textbf{LM}, E.H.~M\"uller, JCP (2016).
+        \arxivlink{1605.00492}{cs.MS}}\\
+      {\scriptsize R.C.~Kirby, \textbf{LM}. \arxivlink{1706.01346}{cs.MS}}
+    \end{flushright}
+  \item Can automatically derive discrete adjoints of
+    time-dependent models \url{www.dolfin-adjoint.org} (works, with
+    c.~100 lines compatibility code with Firedrake).
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Performance}
+  Fast prototyping is good, ``but I have to rewrite for performance''.
+
+  \begin{uncoverenv}<2>
+    \begin{itemize}
+    \item Firedrake provides computational performance often >50\%
+      achievable peak \parencite{Luporini:2015,Bercea:2016,Mitchell:2016}.
+    \item Hero-coding probably necessary if you want the rest.
+    \item ...but at what (person) cost?
+    \item Does the numericist have the expertise anyway?
+    \end{itemize}
+  \end{uncoverenv}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Conclusions}
+  \begin{itemize}
+  \item Firedrake is high performance for many problems in both
+    the programmer and computer time metrics
+  \item A good choice for experimenting with new algorithms: you can
+    run on your laptop and scale up easily
+  \item I can't solve your maths problems, I can give you tools to
+    write down the solution more easily
+  \end{itemize}
+
+  \begin{block}{Future directions}
+    \begin{itemize}
+    \item Matrix-free solvers for high-order discretisations
+    \item Code generation for nonlinear domain decomposition solvers
+    \item Adaptivity in $h$ and $p$
+    \end{itemize}
+  \end{block}
+\end{frame}
 
 \section{Lecture excerpt}
 
